--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <h2>I'm a Web Devoloper</h2>
 <hr />
 <h3><a href="../public/movie-ranking.html">Movie Ranking Project</a></h3>
-<img src="../assets/movie Ranking.png" height="250px" alt="Movie Rankings"/>
+<img src="../assets/images/movie Ranking.png" height="250px" alt="Movie Rankings"/>
 <h3><a href="../public/birthday-invite.html">Birthday Invite Project</a></h3>
-<img src="../assets/Birthday Invite.png" height="250px" alt="Birthday Invite"/>
+<img src="../assets/images/Birthday Invite.png" height="250px" alt="Birthday Invite"/>
 <hr \>
 <a href="../public/about.html">About Me</a>
 <a href="../public/contact.html">Contact Me</a>
